net.resheim.sidscore/src/main/java/net/resheim/sidscore/parser/SIDScoreParser.java
// Generated from SIDScoreParser.g4 by ANTLR 4.13.2
package net.resheim.sidscore.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SIDScoreParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TITLE=1, AUTHOR=2, RELEASED=3, TEMPO=4, TIME=5, SYSTEM=6, TUNE=7, IMPORT=8,
		AS=9, TABLE=10, LOOP=11, HOLD=12, EFFECT=13, ANY=14, EFFECT_LENGTH=15,
		TICKS=16, PRIORITY=17, RESTART=18, IGNORE=19, STEAL=20, ATK=21, FRAME=22,
		TO=23, LINEAR=24, EXP=25, LOG=26, STEP=27, INSTR=28, VOICE=29, SWING=30,
		SYNC=31, RING=32, FILTER=33, FILTERROUTE=34, CUTOFF=35, RES=36, NOTEK=37,
		RESET=38, GATE=39, GATEMIN=40, RETRIGGER=41, LEGATO=42, LP=43, BP=44,
		HP=45, OFF=46, ON=47, PAL=48, NTSC=49, WAVE=50, ADSR=51, PW=52, HIPULSE=53,
		LOWPULSE=54, WAVESEQ=55, PWMIN=56, PWMAX=57, PWSWEEP=58, PWSEQ=59, FILTERSEQ=60,
		GATESEQ=61, PITCHSEQ=62, VIBRATO=63, PITCH=64, FREQ=65, ATTACK=66, DECAY=67,
		SUSTAIN=68, RELEASE=69, VOLUME=70, WAVEVAL=71, LEG_START=72, LEG_END=73,
		TUPLET_START=74, RBRACE=75, LBRACE=76, AT=77, LPAREN=78, AMP=79, GT=80,
		LT=81, COLON=82, EQ=83, COMMA=84, SLASH=85, PLUS=86, MINUS=87, REPEAT_END=88,
		OCTAVE=89, LENGTH=90, NOTE=91, REST=92, HIT=93, ID=94, INT=95, HEX=96,
		STRING=97, COMMENT=98, WS=99;
	public static final int
		RULE_file = 0, RULE_stmt = 1, RULE_titleStmt = 2, RULE_authorStmt = 3,
		RULE_releasedStmt = 4, RULE_tempoStmt = 5, RULE_timeStmt = 6, RULE_swingStmt = 7,
		RULE_systemStmt = 8, RULE_importStmt = 9, RULE_songBlock = 10, RULE_songStmt = 11,
		RULE_effectStmt = 12, RULE_effectBodyStmt = 13, RULE_effectVoiceStmt = 14,
		RULE_effectVoice = 15, RULE_effectLengthStmt = 16, RULE_effectPriorityStmt = 17,
		RULE_effectRetriggerStmt = 18, RULE_effectRetriggerMode = 19, RULE_effectStep = 20,
		RULE_effectTick = 21, RULE_effectGroup = 22, RULE_effectAssignment = 23,
		RULE_effectSweep = 24, RULE_effectSweepParam = 25, RULE_effectSweepValue = 26,
		RULE_effectSweepCurve = 27, RULE_numericValue = 28, RULE_instrStmt = 29,
		RULE_instrParam = 30, RULE_signedInt = 31, RULE_waveList = 32, RULE_onOff = 33,
		RULE_gateMode = 34, RULE_filterSpec = 35, RULE_filterList = 36, RULE_filterMode = 37,
		RULE_tableStmt = 38, RULE_tableStep = 39, RULE_tableValue = 40, RULE_tableDuration = 41,
		RULE_tableCtrl = 42, RULE_tableCtrlItem = 43, RULE_noteSpec = 44, RULE_voiceBlock = 45,
		RULE_voiceItem = 46, RULE_noteOrRestOrHit = 47, RULE_legatoScope = 48,
		RULE_tuplet = 49, RULE_repeat = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "stmt", "titleStmt", "authorStmt", "releasedStmt", "tempoStmt",
			"timeStmt", "swingStmt", "systemStmt", "importStmt", "songBlock", "songStmt",
			"effectStmt", "effectBodyStmt", "effectVoiceStmt", "effectVoice", "effectLengthStmt",
			"effectPriorityStmt", "effectRetriggerStmt", "effectRetriggerMode", "effectStep",
			"effectTick", "effectGroup", "effectAssignment", "effectSweep", "effectSweepParam",
			"effectSweepValue", "effectSweepCurve", "numericValue", "instrStmt",
			"instrParam", "signedInt", "waveList", "onOff", "gateMode", "filterSpec",
			"filterList", "filterMode", "tableStmt", "tableStep", "tableValue", "tableDuration",
			"tableCtrl", "tableCtrlItem", "noteSpec", "voiceBlock", "voiceItem",
			"noteOrRestOrHit", "legatoScope", "tuplet", "repeat"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'TITLE'", "'AUTHOR'", "'RELEASED'", "'TEMPO'", "'TIME'", "'SYSTEM'",
			"'TUNE'", "'IMPORT'", "'AS'", "'TABLE'", "'LOOP'", "'HOLD'", "'EFFECT'",
			"'ANY'", "'LENGTH'", "'TICKS'", "'PRIORITY'", "'RESTART'", "'IGNORE'",
			"'STEAL'", "'AT'", "'FRAME'", "'TO'", "'LINEAR'", "'EXP'", "'LOG'", "'STEP'",
			"'INSTR'", "'VOICE'", "'SWING'", "'SYNC'", "'RING'", "'FILTER'", "'FILTERROUTE'",
			"'CUTOFF'", "'RES'", "'NOTE'", "'RESET'", "'GATE'", "'GATEMIN'", "'RETRIGGER'",
			"'LEGATO'", "'LP'", "'BP'", "'HP'", "'OFF'", "'ON'", "'PAL'", "'NTSC'",
			"'WAVE'", "'ADSR'", "'PW'", "'HIPULSE'", "'LOWPULSE'", "'WAVESEQ'", "'PWMIN'",
			"'PWMAX'", "'PWSWEEP'", "'PWSEQ'", "'FILTERSEQ'", "'GATESEQ'", "'PITCHSEQ'",
			"'VIBRATO'", "'PITCH'", "'FREQ'", "'ATTACK'", "'DECAY'", "'SUSTAIN'",
			"'RELEASE'", "'VOLUME'", null, "'(leg)'", "'(end)'", "'T{'", "'}'", "'{'",
			"'@'", "'('", "'&'", "'>'", "'<'", "':'", "'='", "','", "'/'", "'+'",
			"'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TITLE", "AUTHOR", "RELEASED", "TEMPO", "TIME", "SYSTEM", "TUNE",
			"IMPORT", "AS", "TABLE", "LOOP", "HOLD", "EFFECT", "ANY", "EFFECT_LENGTH",
			"TICKS", "PRIORITY", "RESTART", "IGNORE", "STEAL", "ATK", "FRAME", "TO",
			"LINEAR", "EXP", "LOG", "STEP", "INSTR", "VOICE", "SWING", "SYNC", "RING",
			"FILTER", "FILTERROUTE", "CUTOFF", "RES", "NOTEK", "RESET", "GATE", "GATEMIN",
			"RETRIGGER", "LEGATO", "LP", "BP", "HP", "OFF", "ON", "PAL", "NTSC",
			"WAVE", "ADSR", "PW", "HIPULSE", "LOWPULSE", "WAVESEQ", "PWMIN", "PWMAX",
			"PWSWEEP", "PWSEQ", "FILTERSEQ", "GATESEQ", "PITCHSEQ", "VIBRATO", "PITCH",
			"FREQ", "ATTACK", "DECAY", "SUSTAIN", "RELEASE", "VOLUME", "WAVEVAL",
			"LEG_START", "LEG_END", "TUPLET_START", "RBRACE", "LBRACE", "AT", "LPAREN",
			"AMP", "GT", "LT", "COLON", "EQ", "COMMA", "SLASH", "PLUS", "MINUS",
			"REPEAT_END", "OCTAVE", "LENGTH", "NOTE", "REST", "HIT", "ID", "INT",
			"HEX", "STRING", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SIDScoreParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SIDScoreParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SIDScoreParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1879057918L) != 0)) {
				{
				{
				setState(102);
				stmt();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public TitleStmtContext titleStmt() {
			return getRuleContext(TitleStmtContext.class,0);
		}
		public AuthorStmtContext authorStmt() {
			return getRuleContext(AuthorStmtContext.class,0);
		}
		public ReleasedStmtContext releasedStmt() {
			return getRuleContext(ReleasedStmtContext.class,0);
		}
		public TempoStmtContext tempoStmt() {
			return getRuleContext(TempoStmtContext.class,0);
		}
		public TimeStmtContext timeStmt() {
			return getRuleContext(TimeStmtContext.class,0);
		}
		public SystemStmtContext systemStmt() {
			return getRuleContext(SystemStmtContext.class,0);
		}
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public SongBlockContext songBlock() {
			return getRuleContext(SongBlockContext.class,0);
		}
		public TableStmtContext tableStmt() {
			return getRuleContext(TableStmtContext.class,0);
		}
		public EffectStmtContext effectStmt() {
			return getRuleContext(EffectStmtContext.class,0);
		}
		public InstrStmtContext instrStmt() {
			return getRuleContext(InstrStmtContext.class,0);
		}
		public SwingStmtContext swingStmt() {
			return getRuleContext(SwingStmtContext.class,0);
		}
		public VoiceBlockContext voiceBlock() {
			return getRuleContext(VoiceBlockContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TITLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				titleStmt();
				}
				break;
			case AUTHOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				authorStmt();
				}
				break;
			case RELEASED:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				releasedStmt();
				}
				break;
			case TEMPO:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				tempoStmt();
				}
				break;
			case TIME:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				timeStmt();
				}
				break;
			case SYSTEM:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				systemStmt();
				}
				break;
			case IMPORT:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				importStmt();
				}
				break;
			case TUNE:
				enterOuterAlt(_localctx, 8);
				{
				setState(117);
				songBlock();
				}
				break;
			case TABLE:
				enterOuterAlt(_localctx, 9);
				{
				setState(118);
				tableStmt();
				}
				break;
			case EFFECT:
				enterOuterAlt(_localctx, 10);
				{
				setState(119);
				effectStmt();
				}
				break;
			case INSTR:
				enterOuterAlt(_localctx, 11);
				{
				setState(120);
				instrStmt();
				}
				break;
			case SWING:
				enterOuterAlt(_localctx, 12);
				{
				setState(121);
				swingStmt();
				}
				break;
			case VOICE:
				enterOuterAlt(_localctx, 13);
				{
				setState(122);
				voiceBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TitleStmtContext extends ParserRuleContext {
		public TerminalNode TITLE() { return getToken(SIDScoreParser.TITLE, 0); }
		public TerminalNode STRING() { return getToken(SIDScoreParser.STRING, 0); }
		public TitleStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titleStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterTitleStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitTitleStmt(this);
		}
	}

	public final TitleStmtContext titleStmt() throws RecognitionException {
		TitleStmtContext _localctx = new TitleStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_titleStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(TITLE);
			setState(126);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AuthorStmtContext extends ParserRuleContext {
		public TerminalNode AUTHOR() { return getToken(SIDScoreParser.AUTHOR, 0); }
		public TerminalNode STRING() { return getToken(SIDScoreParser.STRING, 0); }
		public AuthorStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_authorStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterAuthorStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitAuthorStmt(this);
		}
	}

	public final AuthorStmtContext authorStmt() throws RecognitionException {
		AuthorStmtContext _localctx = new AuthorStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_authorStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(AUTHOR);
			setState(129);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReleasedStmtContext extends ParserRuleContext {
		public TerminalNode RELEASED() { return getToken(SIDScoreParser.RELEASED, 0); }
		public TerminalNode STRING() { return getToken(SIDScoreParser.STRING, 0); }
		public ReleasedStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_releasedStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterReleasedStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitReleasedStmt(this);
		}
	}

	public final ReleasedStmtContext releasedStmt() throws RecognitionException {
		ReleasedStmtContext _localctx = new ReleasedStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_releasedStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(RELEASED);
			setState(132);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TempoStmtContext extends ParserRuleContext {
		public TerminalNode TEMPO() { return getToken(SIDScoreParser.TEMPO, 0); }
		public TerminalNode INT() { return getToken(SIDScoreParser.INT, 0); }
		public TempoStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempoStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterTempoStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitTempoStmt(this);
		}
	}

	public final TempoStmtContext tempoStmt() throws RecognitionException {
		TempoStmtContext _localctx = new TempoStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tempoStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(TEMPO);
			setState(135);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TimeStmtContext extends ParserRuleContext {
		public TerminalNode TIME() { return getToken(SIDScoreParser.TIME, 0); }
		public List<TerminalNode> INT() { return getTokens(SIDScoreParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SIDScoreParser.INT, i);
		}
		public TerminalNode SLASH() { return getToken(SIDScoreParser.SLASH, 0); }
		public TimeStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterTimeStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitTimeStmt(this);
		}
	}

	public final TimeStmtContext timeStmt() throws RecognitionException {
		TimeStmtContext _localctx = new TimeStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_timeStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(TIME);
			setState(138);
			match(INT);
			setState(139);
			match(SLASH);
			setState(140);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SwingStmtContext extends ParserRuleContext {
		public TerminalNode SWING() { return getToken(SIDScoreParser.SWING, 0); }
		public TerminalNode INT() { return getToken(SIDScoreParser.INT, 0); }
		public TerminalNode OFF() { return getToken(SIDScoreParser.OFF, 0); }
		public SwingStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_swingStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterSwingStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitSwingStmt(this);
		}
	}

	public final SwingStmtContext swingStmt() throws RecognitionException {
		SwingStmtContext _localctx = new SwingStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_swingStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(SWING);
			setState(143);
			_la = _input.LA(1);
			if ( !(_la==OFF || _la==INT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemStmtContext extends ParserRuleContext {
		public TerminalNode SYSTEM() { return getToken(SIDScoreParser.SYSTEM, 0); }
		public TerminalNode PAL() { return getToken(SIDScoreParser.PAL, 0); }
		public TerminalNode NTSC() { return getToken(SIDScoreParser.NTSC, 0); }
		public SystemStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterSystemStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitSystemStmt(this);
		}
	}

	public final SystemStmtContext systemStmt() throws RecognitionException {
		SystemStmtContext _localctx = new SystemStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_systemStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(SYSTEM);
			setState(146);
			_la = _input.LA(1);
			if ( !(_la==PAL || _la==NTSC) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(SIDScoreParser.IMPORT, 0); }
		public TerminalNode STRING() { return getToken(SIDScoreParser.STRING, 0); }
		public TerminalNode AS() { return getToken(SIDScoreParser.AS, 0); }
		public TerminalNode INT() { return getToken(SIDScoreParser.INT, 0); }
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SIDScoreParserListener ) ((SIDScoreParserListener)listener).exitImportStmt(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_importStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(IMPORT);
			setState(149);
			match(STRING);
			setState(150);
			match(AS);
			setState(151);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
